--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
     "fullcalendar-reactwrapper": "^1.0.7",
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
+    "react-cookies": "^0.1.0",
+    "react-datetime": "^2.14.0",
     "react-dom": "^16.2.0",
+    "react-materialize": "^2.1.2",
     "react-notifications": "^1.4.3",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
   },
   "scripts": {
