--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "joi": "^13.1.2",
     "mongodb": "^3.0.4",
     "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0"
+    "passport-google-oauth": "^1.0.0",
+    "react-router": "^4.2.0"
   }
 }
