--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "joi": "^13.1.2",
     "mongodb": "^3.0.4",
+    "node-schedule": "^1.3.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "react-router": "^4.2.0"
